# rcp_cpp_python

./: .gitignore  CMakeLists.txt  client.py  server.py
include/: external_struct.h
src/: client.cpp  main.cpp  server.cpp
